Adding Spring config for Redis